cmake_minimum_required(VERSION 3.10)
project(olxmain)
set(CMAKE_THREAD_LIBS_INIT "-lpthread")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pthread ")
add_subdirectory(client)
add_subdirectory(server)
include_directories("include")
add_executable(${PROJECT_NAME} main.c olxmain.c olxmanager.c)
target_link_libraries(${PROJECT_NAME} client server)